--- a/src/partials/support-ukraine.html
+++ b/src/partials/support-ukraine.html
@@ -1,124 +1,31 @@
 <div class="box-support-ukraine">
 <div class="name">
-    <h2 class="pharag">Support Ukraine</h2>
-    <img
-                      srcset="
-                        ./img/support-ukraine/Vector-1x.png 1x,
-                        ./img/support-ukraine/Vector-2x.png 2x
-                      "
-                      src="./img/support-ukraine/Vector-1x.png"
-                      alt="Trizyb"
-                      width="20"
-                      height="32" class="trizyb"
-                    />
-</div>
-<div class="image">
-<ul class="scroll">
-    <li class="spisok"><img
-        srcset="
-          ./img/support-ukraine/1-1x.png 1x,
-          ./img/support-ukraine/1-2x.png 2x
-        "
-        src="./img/support-ukraine/1-1x.png"
-        alt="save-the-children"
-        width="159"
-        height="32" 
-      /></li>
-    <li class="spisok"><img
-        srcset="
-          ./img/support-ukraine/2-1x.png 1x,
-          ./img/support-ukraine/2-2x.png 2x
-        "
-        src="./img/support-ukraine/2-1x.png"
-        alt="project-hope"
-        width="96"
-        height="32" 
-      /></li>
-    <li class="spisok"><img
-        srcset="
-          ./img/support-ukraine/3-1x.png 1x,
-          ./img/support-ukraine/3-2x.png 2x
-        "
-        src="./img/support-ukraine/3-1x.png"
-        alt="international-medical-corps"
-        width="137"
-        height="32" 
-      /></li>
-    <li class="spisok"><img
-        srcset="
-          ./img/support-ukraine/4-1x.png 1x,
-          ./img/support-ukraine/4-2x.png 2x
-        "
-        src="./img/support-ukraine/4-1x.png"
-        alt="razom"
-        width="137"
-        height="32" 
-      /></li>
-    <li class="spisok"><img
-        srcset="
-          ./img/support-ukraine/5-1x.png 1x,
-          ./img/support-ukraine/5-2x.png 2x
-        "
-        src="./img/support-ukraine/5-1x.png"
-        alt="action-against-hunger"
-        width="89"
-        height="32" 
-      /></li>
-    <li class="spisok"><img
-        srcset="
-          ./img/support-ukraine/6-1x.png 1x,
-          ./img/support-ukraine/6-2x.png 2x
-        "
-        src="./img/support-ukraine/6-1x.png"
-        alt="sergiy-prytula"
-        width="149"
-        height="32" 
-      /></li>
-    <li class="spisok"><img
-        srcset="
-          ./img/support-ukraine/7-1x.png 1x,
-          ./img/support-ukraine/7-2x.png 2x
-        "
-        src="./img/support-ukraine/7-1x.png"
-        alt="medecins-sans-frontieres"
-        width="127"
-        height="32" 
-      /></li>
-    <li class="spisok"><img
-        srcset="
-          ./img/support-ukraine/8-1x.png 1x,
-          ./img/support-ukraine/8-2x.png 2x
-        "
-        src="./img/support-ukraine/8-1x.png"
-        alt="world-vision"
-        width="119"
-        height="32" 
-      /></li>
-    <li class="spisok"><img
-        srcset="
-          ./img/support-ukraine/9-1x.png 1x,
-          ./img/support-ukraine/9-2x.png 2x
-        "
-        src="./img/support-ukraine/9-1x.png"
-        alt="united24"
-        width="143"
-        height="32" 
-      /></li>
-</ul>
-</div>
-<button type="button" class="btn" width="32" height="32"><img
-    srcset="
-      ./img/support-ukraine/slider.png,
-    "
-    src="./img/support-ukraine/slider.png"
-    alt="slider"
-    width="32"
-    height="32" 
-  />
-  </button>
-  <script>
-    $(document).ready(function(){
-        $(".btn").dropdown();
-    });
-    </script>
+  <h2 class="pharag">Support Ukraine
+    <svg
+      class="trizyb"
+      width="20"
+      height="32"
+      aria-label="Trizub"
+    >
+      <use href="./img/global/icons.svg#icon-trizub"></use>
+    </svg>
+  </h2>
+
+
+
+
+  </div>
+
+<ul class="spisok js-support_list"></ul>
+
+<button type="button" class="supbtn js-support_btn">
+  <svg
+    class="support__btn_icon"
+    width="20"
+    height="20"
+    aria-label="Show more"
+  >
+    <use href="./img/global/icons.svg#icon-slider"></use>
+  </svg>
+</button>
 </div>
