--- a/src/css/support-ukraine.css
+++ b/src/css/support-ukraine.css
@@ -1,3 +1,19 @@
+.name {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  min-width: 193px;
+  min-height: 32px;
+  gap: 12px;
+  margin-left: 40px;
+  margin-top: 24px;
+}
+
+@media only screen and (min-width: 768px) {
+  .name {
+    min-width: 208px;
+  }
+}
 
 .pharag {
   font: DM Sans;
@@ -14,66 +30,114 @@
       line-height: 28px;
     }
   }
-  
-  .name {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      width: 193px;
-      height: 32px;
-      gap: 12px;
-      margin-left: 40px;
-      margin-top: 24px;
-    }
-  
-    @media only screen and (min-width: 768px) {
-      .name {
-        min-width: 208px;
-      }
-    }
-  
-    .trizyb {
-      align-items: right;
-    }
+
+.trizyb {
+  margin-left: 12px;
+}
   
     .spisok {
-      margin-bottom: 1.1em;
+      overflow-y: scroll;
+      height: 190px;
+      margin-bottom: 16px;
+      margin-left: 40px;
+      margin-top: 32px;
     }
+    
+  @media only screen and (min-width: 768px) {
+        .spisok {
+          height: 295px;
+        margin-bottom: 32px;
+        }
+      }
+    
+      @media only screen and (min-width: 1440px) {
+        .spisok {
+          margin-bottom: 40px;
+        }
+      }
 
-    .image { 
-    display: flex;
-    min-width: 159px;
-    min-height: 292px;
-    align-items: center;
-    margin-left: 40px;
-    margin-top: 40px;
-    }
-  
-    .btn {
+      .spisok::-webkit-scrollbar {
+        width: 3px;
+      }
+    
+        .spisok-thumb {
+          border-radius: 12px;
+          background: var(--categories-scrollbar);
+        }
+    
+    .support__link {
       display: flex;
-      width: 32px;
+      align-items: center;
       height: 32px;
-      margin-left: 151.5px;
-      rotation: -90°;
     }
-  
-    @media only screen and (min-width: 768px) {
-      .btn {
-        width: 38px;
-        height: 38px;
-        margin-left: 151.5px;
+    
+    .support__item:not(:last-child) {
+      margin-bottom: 20px;
+    }
+    
+    .support__number {
+      margin-right: 16px;
+      font-size: 14px;
+      line-height: 18px;
+      letter-spacing: -0.04em;
+      color: #FFFFFF;
+    }
+    
+    .support__img {
+      filter: grayscale(100%) brightness(0) invert(100%);
+      transition: filter var(--transition-duration) var(--transition-timing-function),
+      transform var(--transition-duration) var(--transition-timing-function);
+    }
+    
+    .support__link:hover .support__img,
+    .support__link:focus .support__img {
+        filter: none;
+        transform: scale(1.1);
       }
+    
+    .supbtn {
+      display: flex;
+      padding: 6px;
+      margin-left: auto;
+      margin-right: auto;
+      border: none;
+      border-radius: 50%;
+      background-color: var(--caritas-txt);
+      transition: background-color var(--transition-duration) var(--transition-timing-function);
+      animation: bounce 3s infinite;
     }
-    @media only screen and (min-width: 1440px) {
-      .btn {
-        width: 38px;
-        height: 38px;
-        margin-left: 159px;
+    
+      @media only screen and (min-width: 768px) {
+        .supbtn {
+          padding: 8px;
+        }
       }
-    }
 
-    .scroll {
-      list-style-type: none;
-  overflow-y: scroll;
-  width: 340px;
+      .supbtn:hover {
+        background-color: #0000FF;
+      }
+  
+    
+    .support__btn_icon {
+      stroke: #0000FF;
+      width: 20px;
+      height: 20px;
+      transition: stroke var(--transition-duration) var(--transition-timing-function);
+    }
+    
+      @media only screen and (min-width: 768px) {
+        .support__btn_icon {
+          width: 22px;
+          height: 22px;
+        }
+      }
+    
+    .supbtn:hover .support__btn_icon {
+      stroke: var(--caritas-txt);
+    }
+    
+    @keyframes bounce {
+      0%, 20%, 50%, 80%, 100% {transform: translateY(0);}
+      40% {transform: translateY(-6px);}
+      60% {transform: translateY(-4px);}
     }
