--- a/src/css/popup-menu.css
+++ b/src/css/popup-menu.css
@@ -42,6 +42,7 @@
   padding: 0;
   display: flex;
   justify-content: center;
+  flex-wrap: wrap;
 }
 .btn-close-popup {
   height: 28px;
@@ -61,4 +62,14 @@
   cursor: pointer;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.images-photo {
+  /* width: 192px; */
+  height: 150px;
+}
+.info-description,
+.info-buy_links,
+.info-author,
+.info-title {
+  font-size: 10px;
 }
