--- a/src/css/support-ukraine.css
+++ b/src/css/support-ukraine.css
@@ -67,7 +67,7 @@
     
     .support__link {
       display: flex;
-      align-items: center;
+      align-items: left;
       height: 32px;
     }
     
