--- a/src/partials/su.html
+++ b/src/partials/su.html
@@ -77,7 +77,7 @@
     </div>
 <div class="cont-for-btn">
     <div class="button-prev-phon">
-        <div class="swiper-button-prev is-hidden"></div>
+        <div class="swiper-button-prev"></div>
         <svg class="icon-arbottom-btn" width="28" height="28">
             <use href="./img/global/icons.svg#icon-arr-bot"></use>
         </svg>
