--- a/src/partials/popup-menu.html
+++ b/src/partials/popup-menu.html
@@ -1,4 +1,16 @@
-    <div class="backdrop-popup-menu hidden">
-    <div class="box-popup-menu hidden"></div>
-    </div>
+<div class="box-popup-menu "></div>
+<div class="backdrop-pop-up" data-pop-up>
+    <div class="modal-pop-up">
+        <button type="button" class="close-button" data-pop-up-close aria-label="Close">
+            <svg class="close-button__icon" width="18" height="18">
+                <use href="../img/global/icons.svg#icon-x-close"></use>
+            </svg>
+        </button>
 
+        <div class="modal-pop-up-content"></div>
+
+        <button type="button" class="modal-pop-up-btn button">
+            Add to shopping list
+        </button>
+    </div>
+</div>
