--- a/src/css/shopping-list.css
+++ b/src/css/shopping-list.css
@@ -227,3 +227,151 @@
 .shop-dark-three {
   color: #b4afaf;
 }
+
+.hidden-pagination {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+  outline: 0;
+  outline-offset: 0;
+}
+
+.pagination {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 40px;
+  margin-top: 20px;
+  @media screen and (min-width: 768px) {
+    margin-top: 40px;
+  }
+}
+
+.buttons-pagination-left,
+.buttons-pagination-right {
+  position: relative;
+  border-radius: 50%;
+  width: 38px;
+  height: 38px;
+  @media screen and (min-width: 768px) {
+    width: 44px;
+    height: 44px;
+  }
+}
+
+.icons {
+  position: absolute;
+  bottom: 7px;
+  @media screen and (min-width: 768px) {
+    bottom: 10px;
+  }
+}
+
+.buttons-pagination-left {
+  background-color: var(--black-color);
+  border: none;
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.buttons-pagination-left:active {
+  box-shadow: 0 0 0 5px rgba(17, 17, 17, 0.3);
+}
+
+.icon-left {
+  fill: #b4afaf;
+  right: 7px;
+  @media screen and (min-width: 768px) {
+    right: 10px;
+  }
+}
+
+.buttons-pagination-right {
+  background-color: var(--yellow-color);
+  border: var(--black-color) solid 1px;
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.buttons-pagination-right:active {
+  box-shadow: 0 0 0 5px rgba(234, 198, 69, 0.3);
+}
+
+.icon-right {
+  fill: var(--black-color);
+  left: 7px;
+  @media screen and (min-width: 768px) {
+    left: 10px;
+  }
+}
+
+.prev {
+  margin-right: 14px;
+  @media screen and (min-width: 768px) {
+    margin-right: 24px;
+  }
+}
+
+.next {
+  margin-left: 14px;
+  @media screen and (min-width: 768px) {
+    margin-left: 24px;
+  }
+}
+
+.double-prev {
+  margin-right: 5px;
+  @media screen and (min-width: 768px) {
+    margin-right: 8px;
+  }
+}
+
+.double-next {
+  margin-left: 5px;
+  @media screen and (min-width: 768px) {
+    margin-left: 8px;
+  }
+}
+
+.buttons-numbers {
+  display: flex;
+  flex-direction: row;
+  gap: 8px;
+  @media screen and (min-width: 768px) {
+    gap: 10px;
+  }
+}
+
+.bth-num {
+  background-color: var(--white-background);
+  color: var(--black-color);
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 22px;
+  border: var(--black-color) solid 1px;
+  border-radius: 50%;
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  width: 38px;
+  height: 38px;
+  @media screen and (min-width: 768px) {
+    width: 44px;
+    height: 44px;
+  }
+}
+
+.bth-num:active {
+  box-shadow: 0 0 0 5px rgba(180, 175, 175, 0.3);
+}
+
+.bth-active {
+  background-color: var(--black-color);
+  color: var(--white-background);
+  border: none;
+}
