--- a/src/partials/shopping-main.html
+++ b/src/partials/shopping-main.html
@@ -1,8 +1,42 @@
 <section class="container-shopping-list js-shopping-list">
   <h2 class="shopping-list-title">Shopping<span> List</span></h2>
   <div class="shopping-list-empty hidden">
-    <p class="shopping-list-empty-text">This page is empty, add some books and proceed to order.</p>
-    <img class="shopping-list-empty-img" src="./img/shopping/shop-is-empty.png" alt=" books" loading="lazy" />
+    <p class="shopping-list-empty-text">
+      This page is empty, add some books and proceed to order.
+    </p>
+    <img
+      class="shopping-list-empty-img"
+      src="./img/shopping/shop-is-empty.png"
+      alt=" books"
+      loading="lazy"
+    />
   </div>
   <ul class="shop-list js-shop-list"></ul>
+  <div class="pagination">
+    <button type="button" class="double-prev buttons-pagination-left">
+      <svg width="24" height="24" class="icons icon-left">
+        <use href="./img/global/icons.svg#icon-arrow-double-left"></use>
+      </svg>
+    </button>
+
+    <button type="button" class="prev buttons-pagination-left">
+      <svg width="24" height="24" class="icons icon-left">
+        <use href="./img/global/icons.svg#icon-arrow-left"></use>
+      </svg>
+    </button>
+
+    <div class="buttons-numbers"></div>
+
+    <button type="button" class="next buttons-pagination-right">
+      <svg width="24" height="24" class="icons icon-right">
+        <use href="./img/global/icons.svg#icon-arrow-right"></use>
+      </svg>
+    </button>
+
+    <button type="button" class="double-next buttons-pagination-right">
+      <svg width="24" height="24" class="icons icon-right">
+        <use href="./img/global/icons.svg#icon-arrow-double-right"></use>
+      </svg>
+    </button>
+  </div>
 </section>
