--- a/src/partials/su.html
+++ b/src/partials/su.html
@@ -5,7 +5,7 @@
         <img srcset="
                             ./img/support-ukraine/Vector1x.png 1x,
                             ./img/support-ukraine/Vector1x.png 2x
-        " src="./img/global/h.webp" alt="Trizyb" width="20" height="32" class="trizyb-su" />
+        " src="./img/global/gerb.png" alt="Trizyb" width="20" height="32" class="trizyb-su" />
     </div>
 
     <div class="swiper">
