--- a/src/css/popup-menu.css
+++ b/src/css/popup-menu.css
@@ -1,4 +1,4 @@
-/* :root {
+:root {
   --timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   --animation-duration: 250ms;
 }
@@ -48,8 +48,8 @@
   height: 28px;
   width: 28px;
   /* border-radius: 50%; */
-/* background-color: #4f2ee8; */
-/* display: flex;
+  /* background-color: #4f2ee8; */
+  display: flex;
   align-items: center;
   justify-content: center;
 
@@ -58,242 +58,18 @@
   right: 24px;
   /* background-color: #e7e9fc;
   border: 1px solid rgba(0, 0, 0, 0.1); */
-/* padding: 0;
+  padding: 0;
   cursor: pointer;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .images-photo {
   /* width: 192px; */
-/* height: 150px;
+  height: 150px;
 }
 .info-description,
 .info-buy_links,
 .info-author,
 .info-title {
   font-size: 10px;
-}   
-
-/**********************************Modal CSS******************************
-
-/* */
-
-.modal-pop-up {
-  z-index: 30;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-
-  transform: translate(-50%, -50%) scale(1);
-  padding: 40px 24px;
-  min-width: 335px;
-  max-height: 762px;
-  overflow-y: auto;
-  overflow-x: hidden;
-  color: #111111;
-  background-color: #fff;
-  border: 2px solid #111;
-  border-radius: 18px;
-  /* overflow: auto; */
-  @media screen and (min-width: 768px) {
-    max-width: 579px;
-    min-height: 501px;
-    padding: 40px;
-    overflow-y: auto;
-  }
-}
-
-.close-button {
-  background-color: transparent;
-  position: absolute;
-  top: 12px;
-  right: 12px;
-
-  display: flex;
-  justify-content: center;
-  align-items: center;
-
-  width: 24px;
-  height: 24px;
-
-  border: none;
-  border-radius: 50%;
-
-  padding: 0;
-  cursor: pointer;
-
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
-  @media screen and (min-width: 768px) {
-    top: 24px;
-    right: 24px;
-
-    width: 28px;
-    height: 28px;
-  }
-}
-
-.close-button__icon {
-  stroke: #111;
-
-  @media screen and (min-width: 768px) {
-    width: 21px;
-    height: 21px;
-  }
-}
-
-.close-button__icon:focus,
-.close-button__icon:hover {
-  stroke: #eac645;
-}
-
-.modal-pop-up-content {
-  @media screen and (min-width: 768px) {
-    display: flex;
-    gap: 24px;
-    margin-bottom: 40px;
-  }
-}
-
-.modal-book-attributes {
-  display: flex;
-  flex-direction: column;
-}
-
-.modal-img {
-  max-width: 287px;
-  min-height: 408px;
-  border-radius: 8px;
-  margin-bottom: 14px;
-  border: none;
-
-  @media screen and (min-width: 768px) {
-    max-width: 192px;
-    min-height: 281px;
-  }
-}
-
-.modal-book-title {
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 1.12;
-  letter-spacing: -0.04em;
-
-  @media screen and (min-width: 768px) {
-    font-size: 24px;
-    line-height: 1.17;
-
-    max-width: 270px;
-  }
-}
-
-.modal-book-author {
-  margin-bottom: 18px;
-  font-style: italic;
-  font-size: 12px;
-  line-height: 1.17;
-  letter-spacing: -0.04em;
-  color: #b4afaf;
-
-  @media screen and (min-width: 768px) {
-    margin-bottom: 8px;
-    font-size: 14px;
-    line-height: 1.29;
-  }
-}
-
-.modal-book-desc {
-  margin-bottom: 14px;
-  color: #111111;
-
-  font-size: 14px;
-  line-height: 1.29;
-  letter-spacing: -0.04em;
-  @media screen and (min-width: 768px) {
-    margin-bottom: 20px;
-  }
-}
-
-.modal-shops {
-  display: flex;
-  align-items: center;
-
-  gap: 20px;
-  margin-bottom: 40px;
-
-  @media screen and (min-width: 768px) {
-    margin-bottom: 0;
-  }
-}
-
-.modal-shop-img {
-  filter: grayscale(100%);
-  mix-blend-mode: luminosity;
-  transition: transform 200ms, filter 200ms;
-
-  &:hover,
-  &:focus {
-    mix-blend-mode: normal;
-    transition-duration: 0.3s;
-    filter: drop-shadow(0px 3px 3px rgba(0, 0, 0, 0.3));
-  }
-}
-
-.modal-pop-up-btn {
-  margin: 0 auto;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-
-  padding: 14px 0px;
-  min-width: 210px;
-  height: 46px;
-
-  border-radius: 40px;
-  border: 2px solid #4f2ee8;
-  color: #111;
-  background-color: #fff;
-  font-size: 14px;
-  font-weight: 700;
-  text-transform: uppercase;
-
-  transition-duration: 0.3s;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  box-shadow: 0 4px 4px #00000040, 0 4px 4px #00000040;
-  text-shadow: 0 4px 4px #00000040;
-  font-family: DM Sans;
-
-  line-height: 1.29;
-  letter-spacing: -0.01em;
-  @media screen and (min-width: 768px) {
-    padding: 20px 0;
-    min-width: 499px;
-    font-size: 18px;
-    line-height: 1.33;
-  }
-  &:hover,
-  &:focus {
-    color: #fff;
-    background-color: #4f2ee8;
-  }
-}
-
-.modal-message {
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 8px;
-  max-width: 242px;
-  font-weight: 400;
-  font-size: 10px;
-  line-height: 1.2;
-  text-align: center;
-  letter-spacing: -0.04em;
-
-  color: var(--modal-message);
-  @media screen and (min-width: 768px) {
-    max-width: 324px;
-    font-size: 12px;
-    line-height: 1.17;
-  }
 }
