shopping list console errors fix + main content spiner test

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -41,7 +41,7 @@
       <use href="./img/global/icons.svg#icon-x-close"></use>
     </svg>
   </button>
-
+  <!-- <span class="loader"></span> -->
   <!-- Mobile menu -->
 
   <div class="menu-data-modile" data-menu>
