--- a/src/css/header.css
+++ b/src/css/header.css
@@ -354,17 +354,75 @@ input:checked + .burger-menu-icon {
   color: rgba(17, 17, 17, 0.6);
 }
 
-.categories-list-dark-mode {
+.dark-mode .categories-list {
   color: rgba(255, 255, 255, 0.6);
 }
 
-.categories-list-dark-mode li:hover {
+.dark-mode .categories-list li:hover {
   color: rgba(234, 198, 69, 1);
 }
+
+/* .categories-list-dark-mode {
+  color: rgba(255, 255, 255, 0.6);
+} */
+
+/* .categories-list-dark-mode li:hover {
+  color: rgba(234, 198, 69, 1);
+} */
 /* .category-dark-hover {
   color: rgba(234, 198, 69, 1);
 } */
 
-.categories-list-dark-mode .category-active {
+/* .categories-list-dark-mode .category-active {
   color: rgba(234, 198, 69, 1);
+} */
+
+.dark-mode .categories-list .category-active {
+  color: #eac645;
 }
+
+/* Spiner test  */
+
+/* .loader {
+  position: relative;
+  display: flex;
+  display: none;
+}
+.loader:before,
+.loader:after {
+  content: '';
+  width: 15px;
+  height: 15px;
+  display: inline-block;
+  position: relative;
+  margin: 0 5px;
+  border-radius: 50%;
+  color: greenyellow;
+  background: currentColor;
+  box-shadow: 50px 0, -50px 0;
+  animation: left 1s infinite ease-in-out;
+}
+.loader:after {
+  color: #ff3d00;
+  animation: right 1.1s infinite ease-in-out;
+}
+
+@keyframes right {
+  0%,
+  100% {
+    transform: translateY(-10px);
+  }
+  50% {
+    transform: translateY(10px);
+  }
+}
+
+@keyframes left {
+  0%,
+  100% {
+    transform: translateY(10px);
+  }
+  50% {
+    transform: translateY(-10px);
+  }
+} */
