--- a/src/css/popup-menu.css
+++ b/src/css/popup-menu.css
@@ -2,6 +2,12 @@
   --timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   --animation-duration: 250ms;
 }
+.is-hidden {
+  visibility: hidden;
+  opacity: 0;
+  pointer-events: none;
+  display: none;
+}
 
 .backdrop-block {
   max-height: 100vh;
@@ -19,17 +25,17 @@
   z-index: 10;
 }
 .box-popup-menu {
+  position: absolute;
   z-index: 11;
   width: 579px;
   height: 516px;
   border-radius: 18px;
   border: 2px solid #111;
   background: #f6f6f6;
-  position: absolute;
   top: 50%;
   right: 50%;
   overflow: hidden;
-  position: absolute;
+  position: relative;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%) scale(1);
@@ -41,12 +47,13 @@
   padding: 72px 24px 24px 24px;
   padding: 0;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   flex-wrap: wrap;
 }
-.btn-close-popup {
-  height: 28px;
-  width: 28px;
+.btn-close-infobook {
+  height: 50px;
+  width: 50px;
   /* border-radius: 50%; */
   /* background-color: #4f2ee8; */
   display: flex;
@@ -63,13 +70,23 @@
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+.photo-card {
+  display: flex;
+}
+.btn-close-infobook {
+  width: 40px;
+}
 .images-photo {
-  /* width: 192px; */
-  height: 150px;
+  width: 192px;
+  height: 281px;
 }
 .info-description,
 .info-buy_links,
 .info-author,
 .info-title {
-  font-size: 10px;
+  font-size: 20px;
+}
+.info-buy-links {
+  display: flex;
+  flex-wrap: wrap;
 }
