--- a/src/partials/popup-menu.html
+++ b/src/partials/popup-menu.html
@@ -1,7 +1,13 @@
-<div class="backdrop-popup-menu hidden">
-    <div class="box-popup-menu hidden">
+<div class="backdrop-popup-menu is-hidden">
+    <div class="box-popup-menu is-hidden">
 
-<button class="btn-close-infobook">X</button>
+<button class="btn-close-infobook">
+<svg class="icon-arbottom-btn" width="28" height="28">
+    <use href="./img/global/icons.svg#icon-x-close"></use>
+</svg>
+
+
+</button>
 
         <div class="popup-menu-conttent">
 
@@ -10,6 +16,8 @@
 
 
      <button class="btn-addto-card">Add to shopping list</button>
-   <button class="btn-remove-card " hidden>Remove from the shopping list</button>
+     <button class="btn-remove-card is-hidden">Remove from the shopping list</button>
+     <p class="addto-card-congrat is-hidden">Сongratulations! You have added the book to the shopping list. To delete, press the button “Remove from the shopping
+    list”.</p>
     </div>
 </div>
