--- a/src/css/su.css
+++ b/src/css/su.css
@@ -76,10 +76,10 @@
   background-color: rgb(255, 255, 255);
   border-radius: 50%;
 }
-.icon-arbottom-btn {
+/* .icon-arbottom-btn {
   margin-top: 10.5px;
   margin-left: 9.5px;
-}
+} */
 
 .swiper-button-prev:after,
 .swiper-rtl .swiper-button-next:after {
