--- a/src/css/popup-menu.css
+++ b/src/css/popup-menu.css
@@ -95,7 +95,7 @@
   }
 }
 
-.icon-arbottom-btn {
+.icon-closes-btn-popup {
   display: block;
   stroke: #111;
   @media screen and (max-width: 768px) {
