--- a/src/partials/popup-menu.html
+++ b/src/partials/popup-menu.html
@@ -2,8 +2,8 @@
     <div class="box-popup-menu is-hidden">
 
         <button class="btn-close-infobook">
-            <svg class="icon-arbottom-btn" width="28" height="28">
-                <use href="../img/global/icons.svg#icon-x-close"></use>
+            <svg class="icon-closes-btn-popup" width="28" height="28">
+                <use href="./img/global/icons.svg#icon-x-close"></use>
             </svg>
 
 
