--- a/src/partials/popup-menu.html
+++ b/src/partials/popup-menu.html
@@ -18,9 +18,9 @@
 
 
         <button class="btn-addto-card modal-btn">Add to shopping list</button>
-        <button class="btn-remove-card is-hidden modal-btn">Remove from the shopping list</button>
+        <button class="btn-remove-card hidden modal-btn">Remove from the shopping list</button>
 
-        <p class="addto-card-congrat is-hidden">Сongratulations! You have added the book to the shopping list. To
+        <p class="addto-card-congrat hidden">Сongratulations! You have added the book to the shopping list. To
             delete, press the button “Remove from the shopping
             list”.</p>
     </div>
