--- a/src/css/popup-menu.css
+++ b/src/css/popup-menu.css
@@ -28,7 +28,7 @@
   position: absolute;
   z-index: 11;
   max-width: 335px;
-  min-height: 806px;
+  /* min-height: 806px; */
   border-radius: 18px;
   border: 2px solid #111;
   background: #f6f6f6;
@@ -52,7 +52,7 @@
 
   @media screen and (min-width: 768px) {
     max-width: 579px;
-    min-height: 501px;
+    /* min-height: 501px; */
     padding: 40px;
     overflow-y: auto;
   }
@@ -62,7 +62,7 @@
   @media screen and (min-width: 768px) {
     display: flex;
     gap: 24px;
-    margin-bottom: 40px;
+    /* margin-bottom: 40px; */
   }
 }
 .btn-close-infobook {
@@ -112,7 +112,7 @@
   @media screen and (min-width: 768px) {
     display: flex;
     gap: 24px;
-    margin-bottom: 40px;
+    /* margin-bottom: 40px; */
   }
 }
 
@@ -128,6 +128,7 @@
   @media screen and (min-width: 768px) {
     max-width: 192px;
     min-height: 281px;
+    margin-bottom: 40px;
   }
 }
 .info-description {
@@ -162,7 +163,7 @@
   &:focus {
     mix-blend-mode: normal;
     transition-duration: 0.3s;
-    filter: drop-shadow(0px 3px 3px rgba(0, 0, 0, 0.3));
+    filter: drop-shadow(0px 6px 6px rgba(0, 0, 0, 0.8));
   }
 }
 .info-author {
@@ -203,7 +204,7 @@
   justify-content: center;
   align-items: center;
 
-  padding: 14px 0px;
+  padding: 14px 23px;
   min-width: 210px;
   height: 46px;
 
@@ -213,6 +214,8 @@
   background-color: #fff;
   font-size: 14px;
   font-weight: 700;
+  line-height: 1.29;
+  letter-spacing: -0.14px;
   text-transform: uppercase;
 
   transition-duration: 0.3s;
@@ -221,8 +224,6 @@
   text-shadow: 0 4px 4px #00000040;
   font-family: DM Sans;
 
-  line-height: 1.29;
-  letter-spacing: -0.01em;
   @media screen and (min-width: 768px) {
     padding: 20px 0;
     min-width: 499px;
@@ -234,5 +235,25 @@
     color: #fff;
 
     background-color: #4f2ee8;
+  }
+}
+
+.addto-card-congrat {
+  color: rgba(17, 17, 17, 0.5);
+
+  text-align: center;
+  margin: 0 auto;
+  margin-top: 8px;
+  width: 242px;
+
+  font-size: 10px;
+  line-height: 1.2;
+  font-weight: 400;
+  letter-spacing: -0.04em;
+
+  @media screen and (min-width: 768px) {
+    width: 324px;
+    font-size: 12;
+    line-height: 1.16;
   }
 }
