--- a/src/partials/popup-menu.html
+++ b/src/partials/popup-menu.html
@@ -17,8 +17,8 @@
 
 
 
-        <button class="btn-addto-card modal-btn">Add to shopping list</button>
-        <button class="btn-remove-card hidden modal-btn">Remove from the shopping list</button>
+        <button class="btn-add-fix btn-addto-card modal-btn ">Add to shopping list</button>
+        <button class="btn-rem-fix btn-remove-card hidden modal-btn">Remove from the shopping list</button>
 
         <p class="addto-card-congrat hidden">Сongratulations! You have added the book to the shopping list. To
             delete, press the button “Remove from the shopping
