--- a/src/css/popup-menu.css
+++ b/src/css/popup-menu.css
@@ -163,7 +163,7 @@
   &:focus {
     mix-blend-mode: normal;
     transition-duration: 0.3s;
-    filter: drop-shadow(0px 6px 6px rgba(0, 0, 0, 0.8));
+    filter: drop-shadow(0px 3px 3px rgba(0, 0, 0, 0.35));
   }
 }
 .info-author {
@@ -212,6 +212,7 @@
   border: 2px solid #4f2ee8;
   color: #111;
   background-color: #fff;
+  font-family: 'DM Sans';
   font-size: 14px;
   font-weight: 700;
   line-height: 1.29;
@@ -222,7 +223,6 @@
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   box-shadow: 0 4px 4px #00000040, 0 4px 4px #00000040;
   text-shadow: 0 4px 4px #00000040;
-  font-family: DM Sans;
 
   @media screen and (min-width: 768px) {
     padding: 20px 0;
@@ -259,5 +259,8 @@
 }
 
 .btn-add-fix {
-  margin-bottom: 31.19px;
+  margin-bottom: 44px;
+  @media screen and (min-width: 768px) {
+    margin-bottom: 31.19px;
+  }
 }
