--- a/src/partials/shopping-main.html
+++ b/src/partials/shopping-main.html
@@ -1,7 +1,5 @@
 <section class="container-shopping-list js-shopping-list">
-  <h2 class="shopping-list-title">Shopping<span> List</span></h2><svg class="shop-trash">
-    <use href="./img/global/icons.svg#trash"></use>
-  </svg>
+  <h2 class="shopping-list-title">Shopping<span> List</span></h2>
   <div class="shopping-list-empty-test hidden">
 
     <div class="shopping-list-empty">
