--- a/src/css/back-to-top.css
+++ b/src/css/back-to-top.css
@@ -9,8 +9,25 @@
   right: 20px;
   bottom: 20px;
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  animation: bounce 3s infinite;
 }
 
-.back-to-top:active {
+.back-to-top:hover {
   box-shadow: 0 0 0 5px rgba(79, 46, 232, 0.3);
+}
+
+@keyframes bounce {
+  0%,
+  20%,
+  50%,
+  80%,
+  100% {
+    transform: translateY(0);
+  }
+  40% {
+    transform: translateY(-6px);
+  }
+  60% {
+    transform: translateY(-4px);
+  }
 }
