Second final fix pagination

--- a/src/css/shopping-list.css
+++ b/src/css/shopping-list.css
@@ -246,21 +246,6 @@
   color: #b4afaf;
 }
 
-.hidden-pagination {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  margin: -1px;
-  border: 0;
-  padding: 0;
-  white-space: nowrap;
-  clip-path: inset(100%);
-  clip: rect(0 0 0 0);
-  overflow: hidden;
-  outline: 0;
-  outline-offset: 0;
-}
-
 .pagination {
   display: flex;
   flex-direction: row;
@@ -386,6 +371,7 @@
   }
 }
 
+.bth-num:hover,
 .bth-num:active {
   box-shadow: 0 0 0 5px rgba(180, 175, 175, 0.3);
 }
