--- a/src/partials/shopping-main.html
+++ b/src/partials/shopping-main.html
@@ -1,11 +1,16 @@
 <section class="container-shopping-list js-shopping-list">
   <h2 class="shopping-list-title">Shopping<span> List</span></h2>
-  <div class="shopping-list-empty-test hidden">
+  <div class="shopping-list-empty-test">
     <div class="shopping-list-empty">
       <p class="shopping-list-empty-text">
         This page is empty, add some books and proceed to order.
       </p>
-      <img class="shopping-list-empty-img" src="./img/shopping/shop-is-empty.png" alt=" books" loading="lazy" />
+      <img
+        class="shopping-list-empty-img"
+        src="./img/shopping/shop-is-empty.png"
+        alt=" books"
+        loading="lazy"
+      />
     </div>
   </div>
   <ul class="shop-list js-shop-list"></ul>
