--- a/src/css/part-all-categories.css
+++ b/src/css/part-all-categories.css
@@ -94,3 +94,7 @@
     gap: 32px;
   }
 }
+.category-item {
+  transition-duration: 0.3s;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
