--- a/src/css/header.css
+++ b/src/css/header.css
@@ -482,47 +482,46 @@ input:checked + .burger-menu-icon {
   background: #11111199;
 }
 /* Spiner test  */
-
 /* .loader {
+  width: 175px;
+  height: 80px;
+  display: block;
+  margin: auto;
+  background-image: radial-gradient(
+      circle 25px at 25px 25px,
+      #e2e3e3 100%,
+      transparent 0
+    ),
+    radial-gradient(circle 50px at 50px 50px, #e2e3e3 100%, transparent 0),
+    radial-gradient(circle 25px at 25px 25px, #e2e3e3 100%, transparent 0),
+    linear-gradient(#e2e3e3 50px, transparent 0);
+  background-size: 50px 50px, 100px 76px, 50px 50px, 120px 40px;
+  background-position: 0px 30px, 37px 0px, 122px 30px, 25px 40px;
+  background-repeat: no-repeat;
   position: relative;
-  display: flex;
-  display: none;
+  box-sizing: border-box;
 }
-.loader:before,
-.loader:after {
+.loader::after {
   content: '';
-  width: 15px;
-  height: 15px;
-  display: inline-block;
-  position: relative;
-  margin: 0 5px;
+  left: 0;
+  right: 0;
+  margin: auto;
+  bottom: 20px;
+  position: absolute;
+  width: 36px;
+  height: 36px;
   border-radius: 50%;
-  color: greenyellow;
-  background: currentColor;
-  box-shadow: 50px 0, -50px 0;
-  animation: left 1s infinite ease-in-out;
-}
-.loader:after {
-  color: #ff3d00;
-  animation: right 1.1s infinite ease-in-out;
+  border: 5px solid transparent;
+  border-color: rgba(79, 46, 232, 1) transparent;
+  box-sizing: border-box;
+  animation: rotation 1s linear infinite;
 }
 
-@keyframes right {
-  0%,
+@keyframes rotation {
+  0% {
+    transform: rotate(0deg);
+  }
   100% {
-    transform: translateY(-10px);
-  }
-  50% {
-    transform: translateY(10px);
-  }
-}
-
-@keyframes left {
-  0%,
-  100% {
-    transform: translateY(10px);
-  }
-  50% {
-    transform: translateY(-10px);
+    transform: rotate(360deg);
   }
 } */
