--- a/src/css/part-all-categories.css
+++ b/src/css/part-all-categories.css
@@ -36,6 +36,17 @@
 
 /* all categories item li*/
 
+.category-active {
+  color: var(--violet-color);
+  text-transform: uppercase;
+  font-weight: 700;
+  -webkit-transition: opacity 0.5s ease-in-out;
+  -moz-transition: opacity 0.5s ease-in-out;
+  -ms-transition: opacity 0.5s ease-in-out;
+  -o-transition: opacity 0.5s ease-in-out;
+  transition: opacity 0.5s ease-in-out;
+}
+
 .category-item {
   font-size: 16px;
   line-height: 18px;
