--- a/src/css/main-content-page.css
+++ b/src/css/main-content-page.css
@@ -176,6 +176,35 @@
     height: 256px;
   }
 }
+.images-card-box {
+  position: relative;
+  overflow: hidden;
+}
+
+.hover-text-card {
+  position: absolute;
+  bottom: 0px;
+  color: #111;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 18px; /* 128.571% */
+  letter-spacing: -0.56px;
+  text-transform: uppercase;
+  text-align: center;
+  background-color: #eac645;
+  width: 100%;
+  height: 70px;
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  border-radius: 0px 0px 8px 8px;
+  padding-top: 26px;
+}
+.part-cards-list-itemcat:hover .hover-text-card,
+.part-cards-list-itemcat:focus .hover-text-card {
+  transform: translateY(0%);
+}
+
 .info-item-title {
   font-size: 16px;
   font-style: normal;
@@ -248,7 +277,7 @@
   }
   .part-cards-list-itemcat {
     width: 218px;
-    /* margin-right: 20px; */
+    /* position: absolute; */
   }
 }
 @media only screen and (min-width: 1440px) {
