--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -18,6 +18,7 @@
 @import url('./authorization.css');
 @import url('./back-to-top.css');
 @import url('./su.css');
+@import url('./footer.css');
 
 :root {
   font-family: 'DM Sans', sans-serif;
