--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -27,7 +27,7 @@
             </nav>
         </div>
         
-                <img class="cat-img" src="../img/global/cat_day_1.svg" alt="Cat" height="100">
+                <img class="cat-img" src="./img/global/cat_day_1.svg" alt="Cat" height="100">
         </div>
 
     </div>
