--- a/src/partials/su.html
+++ b/src/partials/su.html
@@ -16,24 +16,24 @@
                 <p class="support__number">1</p><a
                     href="https://www.savethechildren.net/what-we-do/emergencies/ukraine-crisis" class="support__link">
                     <img class="support__img" srcset="
-                      ./img/support-ukraine/1-1x.png 1x,
-                      ./img/support-ukraine/1-2x.png 2x
+                      ./img/support-ukraine/children.png 1x,
+                      ./img/support-ukraine/children@2x.png 2x
                     " src="./img/support-ukraine/1-1x.png" alt="save-the-children" width="159" height="32" /></a>
             </div>
             <div class="swiper-slide">
                 <p class="support__number">2</p><a href="https://www.projecthope.org/country/ukraine/"
                     class="support__link">
                     <img class="support__img" srcset="
-                      ./img/support-ukraine/2-1x.png 1x,
-                      ./img/support-ukraine/2-2x.png 2x
+                      ./img/support-ukraine/hope.png 1x,
+                      ./img/support-ukraine/hope@2x.png 2x
                     " src="./img/support-ukraine/2-1x.png" alt="project-hope" width="96" height="32" /></a>
             </div>
             <div class="swiper-slide">
                 <p class="support__number">3</p><a href="https://internationalmedicalcorps.org/country/ukraine/"
                     class="support__link">
                     <img class="support__img" srcset="
-                      ./img/support-ukraine/3-1x.png 1x,
-                      ./img/support-ukraine/3-2x.png 2x
+                      ./img/support-ukraine/med-corps.png 1x,
+                      ./img/support-ukraine/med-corps@2x.png 2x
                     " src="./img/support-ukraine/3-1x.png" alt="international-medical-corps" width="137"
                         height="32" /></a>
 
@@ -41,8 +41,8 @@
             <div class="swiper-slide">
                 <p class="support__number">4</p><a href="https://www.razomforukraine.org/" class="support__link">
                     <img class="support__img" srcset="
-                      ./img/support-ukraine/4-1x.png 1x,
-                      ./img/support-ukraine/4-2x.png 2x
+                      ./img/support-ukraine/razom.png 1x,
+                      ./img/support-ukraine/razom@2x.png 2x
                     " src="./img/support-ukraine/4-1x.png" alt="razom" width="137" height="32" /></a>
 
             </div>
@@ -50,24 +50,24 @@
                 <p class="support__number">5</p><a href="https://www.actionagainsthunger.org/location/europe/ukraine/"
                     class="support__link">
                     <img class="support__img" srcset="
-                      ./img/support-ukraine/5-1x.png 1x,
-                      ./img/support-ukraine/5-2x.png 2x
+                      ./img/support-ukraine/hunger.png 1x,
+                      ./img/support-ukraine/hunger@2x.png 2x
                     " src="./img/support-ukraine/5-1x.png" alt="action-against-hunger" width="89" height="32" /></a>
 
             </div>
             <div class="swiper-slide">
                 <p class="support__number">6</p><a href="https://prytulafoundation.org/en" class="support__link">
                     <img class="support__img" srcset="
-                      ./img/support-ukraine/6-1x.png 1x,
-                      ./img/support-ukraine/6-2x.png 2x
+                      ./img/support-ukraine/prytula.png 1x,
+                      ./img/support-ukraine/prytula@2x.png 2x
                     " src="./img/support-ukraine/6-1x.png" alt="sergiy-prytula" width="149" height="32" /></a>
 
             </div>
             <div class="swiper-slide">
                 <p class="support__number">7</p><a href="https://www.msf.org/ukraine" class="support__link">
                     <img class="support__img" srcset="
-                      ./img/support-ukraine/7-1x.png 1x,
-                      ./img/support-ukraine/7-2x.png 2x
+                      ./img/support-ukraine/frontieres.png 1x,
+                      ./img/support-ukraine/frontieres@2x.png 2x
                     " src="./img/support-ukraine/7-1x.png" alt="medecins-sans-frontieres" width="127"
                         height="32" /></a>
 
@@ -75,16 +75,16 @@
             <div class="swiper-slide">
                 <p class="support__number">8</p><a href="https://www.wvi.org/emergencies/ukraine" class="support__link">
                     <img class="support__img" srcset="
-                      ./img/support-ukraine/8-1x.png 1x,
-                      ./img/support-ukraine/8-2x.png 2x
+                      ./img/support-ukraine/vision.png 1x,
+                      ./img/support-ukraine/vision@2x.png 2x
                     " src="./img/support-ukraine/8-1x.png" alt="world-vision" width="119" height="32" /></a>
 
             </div>
             <div class="swiper-slide">
                 <p class="support__number">9</p><a href="https://u24.gov.ua/uk" class="support__link">
                     <img class="support__img" srcset="
-                      ./img/support-ukraine/9-1x.png 1x,
-                      ./img/support-ukraine/9-2x.png 2x
+                      ./img/support-ukraine/united.png 1x,
+                      ./img/support-ukraine/united@2x.png 2x
                     " src="./img/support-ukraine/9-1x.png" alt="united24" width="143" height="32" /></a>
 
             </div>
