--- a/src/css/part-bestseller.css
+++ b/src/css/part-bestseller.css
@@ -16,3 +16,7 @@
    flex-wrap: wrap; */
 /* flex-basis: ((100% - 96px) / 5);
 }   */
+.part-cards-list-item:hover .hover-text-card,
+.part-cards-list-item:focus .hover-text-card {
+  transform: translateY(0%);
+}
