--- a/src/partials/su.html
+++ b/src/partials/su.html
@@ -91,11 +91,14 @@
         </div>
     </div>
     <div class="cont-for-btn">
+        <div class="loader" style="display:none"></div>
         <div class="button-prev-phon">
+
             <div class="swiper-button-prev"></div>
             <svg class="icon-arbottom-btn" width="28" height="28">
                 <use href="./img/global/icons.svg#icon-arr-bot"></use>
             </svg>
+            
         </div>
     </div>
 </div>
